[B] Fix mobile footer spacing

--- a/packages/frontend/components/composed/community/CommunityName/CommunityName.module.css
+++ b/packages/frontend/components/composed/community/CommunityName/CommunityName.module.css
@@ -1,5 +1,8 @@
 .wrapper {
-  > * + * {
-    padding-inline-start: var(--padding-rg);
+  gap: var(--padding-rg);
+
+  @mixin respond theme("screens.100") {
+    flex-direction: column;
+    align-items: start;
   }
 }
